# nsj_rest_lib

./: .env.dist  .gitignore  BUILD.bazel  Makefile  README.md  docker-compose.yml  historico_versoes.md  launch.json.dist  prompt.md  requirements-dev.txt  requirements.txt  setup.cfg  wsgi_dev.ini
.github/workflows/: deploy_docs.yml
classificacao_financeira/get/: test_classificacao_financeira_get.py
internal_docs/: apis_desktop.md  colaborando_projeto.md  exemplo_dtos.md  opentelemetry.md  perguntas_frequentes.md  variaveis_ambiente.md
internal_docs/outros_recursos/: healthcheck.md
internal_docs/recursos/: controller.md  dao.md  dto.md  dto_field.md  dto_sql_join_field.md  entity.md  etag.md  filter_aliases.md  filters.md
nsj_rest_lib/: db_pool_config.py
nsj_rest_lib/dao/: dao_base.py
nsj_rest_lib/descriptor/: dto_field.py
nsj_rest_lib/service/: service_base.py
src/nsj_rest_lib/: db_pool_config.py  exception.py  redis_config.py  settings.py  wsgi.py
tests/: classificacao_financeira_controller.py  classificacao_financeira_dto.py  classificacao_financeira_entity.py  classificacao_financeira_function_types.py  classificacao_financeira_insert_function_type.py  cliente_byfunction_controller.py  cliente_byfunction_dto.py  cliente_byfunction_endereco_dto.py  cliente_byfunction_endereco_entity.py  cliente_byfunction_entity.py  cliente_byfunction_insert_function_type.py  cliente_controller.py  cliente_dto.py  cliente_entity.py  email_dto.py  email_entity.py  test_partial_of_fixed_filters.py
tests/rest/: classificacao_financeira.rest
(+146 files in other folders)
